do many stuff
